Komplexe Zahlen: Zwei Implementierung und Diskussion